Fixed CSS / layout problems when admin bar is present.

--- a/gameconfs/static/css/gameconfs.css
+++ b/gameconfs/static/css/gameconfs.css
@@ -27,7 +27,7 @@
 .title {
     color: #999;
     display: block;
-    padding: 10px 20px 10px;
+    padding: 10px 0 10px 20px;
     margin-left: -20px;
     font-size: 20px;
     font-weight: 200;
